force-app/main/default/objects/PDLM__Document__c/PDLM__Document__c.object-meta.xml
<CustomObject>
    <description>Manage files which are access controlled</description>
    <label>Attachment</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>