force-app/main/default/objects/PDLM__Document__c/fields/PDLM__Check_Out_User__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Check_Out_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that is currently allowed to update the file</description>
    <inlineHelpText>The user that is currently allowed to update the file</inlineHelpText>
    <label>Check Out User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>