force-app/main/default/objects/PDLM__Document__c/fields/PDLM__External_Attachment_Long_URL__c.field-meta.xml
<CustomField>
    <fullName>PDLM__External_Attachment_Long_URL__c</fullName>
    <description>New URL field to accommodate longer URLs to replace External_Attachment_URL__c</description>
    <label>Open</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>