force-app/main/default/objects/PDLM__Document__c/fields/PDLM__Google_File_Id__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Google_File_Id__c</fullName>
    <label>Google File Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>