force-app/main/default/objects/PDLM__Document__c/fields/PDLM__Has_Redlines__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Has_Redlines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Placeholder for has redlines flag on UI. No value is saved to the system, since it is dependent on the comparison revision.</description>
    <inlineHelpText>This item has redlines. To see redlines, compare to another revision.</inlineHelpText>
    <label>Has Redlines</label>
    <type>Checkbox</type>
</CustomField>