force-app/main/default/objects/PDLM__Document__c/fields/PDLM__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Owner_Name__c</fullName>
    <formula>Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>