force-app/main/default/objects/PDLM__Document__c/fields/PDLM__Primary_Attachment__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Primary_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in SKU attachments. Each SKU can only have one primary attachment.</description>
    <label>Primary Attachment</label>
    <type>Checkbox</type>
</CustomField>