force-app/main/default/objects/PDLM__Document__c/fields/PDLM__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Version_Number__c</fullName>
    <inlineHelpText>the Content Version number of this managed chatter file</inlineHelpText>
    <label>Version</label>
    <length>3</length>
    <type>Text</type>
</CustomField>