force-app/main/default/objects/PDLM__Document__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Document_Link__c</columns>
    <columns>PDLM__Document_Title__c</columns>
    <columns>PDLM__Item__c</columns>
    <columns>PDLM__Item_Revision__c</columns>
    <columns>PDLM__Check_Out_User__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>